force-app/main/default/objects/Shipment__c/validationRules/Tracking_Id_Required_shipped_delivered.validationRule-meta.xml
<ValidationRule>
    <fullName>Tracking_Id_Required_shipped_delivered</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK( Tracking_ID__c ), OR( ISPICKVAL( Shipment_Status__c , &apos;Shipped&apos;),  ISPICKVAL( Shipment_Status__c , &apos;Delivered&apos;)))</errorConditionFormula>
    <errorDisplayField>Tracking_ID__c</errorDisplayField>
    <errorMessage>Tracking ID id required if the order is shipped or delivered.</errorMessage>
</ValidationRule>