force-app/main/default/objects/Shipment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order_ID__c</columns>
    <columns>Carrier__c</columns>
    <columns>Shipment_Date__c</columns>
    <columns>Shipment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>